# tidb_vector_client_bug_reproduction

./: pyproject.toml
tests/: test_bug_#58.py
